--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     },
     "require": {
         "php": ">=7.1",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "beberlei/assert": "^2.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
