--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "phpstan/phpstan": "^0.6.3",
         "friendsofphp/php-cs-fixer": "^2.1",
         "squizlabs/php_codesniffer": "^2.8",
-        "mockery/mockery": "^0.9.9"
+        "mockery/mockery": "^0.9.9",
+        "satooshi/php-coveralls": "^1.0"
     },
     "scripts": {
         "test": [
