Add namespace for api calls

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before-script:
     - mkdir -p code-coverage
 
 script:
-    - composer test
+    - composer all
 
 after_success:
     - travis_retry php vendor/bin/coveralls -v
