--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     },
     "require": {
         "php": ">=7.1",
+        "ext-json": "*",
         "guzzlehttp/guzzle": "~6.0",
         "beberlei/assert": "^2.7"
     },
@@ -29,11 +30,11 @@
         "phpstan/phpstan": "^0.6.3",
         "friendsofphp/php-cs-fixer": "^2.1",
         "squizlabs/php_codesniffer": "^2.8",
-        "mockery/mockery": "^0.9.9",
+        "mockery/mockery": "^1.0",
         "satooshi/php-coveralls": "^1.0"
     },
     "scripts": {
-        "test": [
+        "all": [
             "@cs",
             "@phpunit",
             "@phpstan"
