--- a/composer.json
+++ b/composer.json
@@ -15,22 +15,25 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "VysokeSkoly\\Tests\\ImageApi\\Sdk\\": "tests/"
+            "VysokeSkoly\\ImageApi\\Sdk\\": "tests/"
         }
     },
     "require": {
-        "php": ">=7.1",
+        "php": "^7.1",
         "ext-json": "*",
-        "guzzlehttp/guzzle": "~6.0",
-        "beberlei/assert": "^2.7"
+        "beberlei/assert": "^3.0",
+        "guzzlehttp/guzzle": "^6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0",
-        "phpstan/phpstan": "^0.6.3",
         "friendsofphp/php-cs-fixer": "^2.1",
-        "squizlabs/php_codesniffer": "^2.8",
         "mockery/mockery": "^1.0",
-        "satooshi/php-coveralls": "^1.0"
+        "phpstan/phpstan": "^0.6.3",
+        "phpunit/phpunit": "^6.0",
+        "satooshi/php-coveralls": "^1.0",
+        "squizlabs/php_codesniffer": "^2.8"
+    },
+    "config": {
+        "sort-packages": true
     },
     "scripts": {
         "all": [
