--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,35 @@
             "email": "mortal_flesh@seznam.cz"
         }
     ],
+    "require": {
+        "php": "^7.4",
+        "ext-imagick": "*",
+        "ext-json": "*",
+        "ext-mbstring": "*",
+        "beberlei/assert": "^3.0",
+        "lmc/cqrs-http": "^2.0",
+        "php-http/multipart-stream-builder": "^1.2"
+    },
+    "require-dev": {
+        "ergebnis/composer-normalize": "^2.28",
+        "kriswallsmith/buzz": "^1.2",
+        "lmc/cqrs-handler": "^1.3",
+        "mockery/mockery": "^1.5",
+        "nyholm/psr7": "^1.5",
+        "php-mock/php-mock-mockery": "^1.3",
+        "php-parallel-lint/php-parallel-lint": "^1.3",
+        "phpstan/extension-installer": "^1.1",
+        "phpstan/phpstan": "^1.8",
+        "phpstan/phpstan-beberlei-assert": "^1.0",
+        "phpstan/phpstan-mockery": "^1.1",
+        "phpstan/phpstan-phpunit": "^1.1",
+        "phpunit/phpunit": "^9.5",
+        "symfony/var-dumper": "^5.4"
+    },
+    "suggest": {
+        "lmc/cqrs-bundle": "^1.3",
+        "lmc/cqrs-handler": "^1.3"
+    },
     "autoload": {
         "psr-4": {
             "VysokeSkoly\\ImageApi\\Sdk\\": "src/"
@@ -18,36 +47,48 @@
             "VysokeSkoly\\ImageApi\\Sdk\\": "tests/"
         }
     },
-    "require": {
-        "php": "^7.1",
-        "ext-json": "*",
-        "beberlei/assert": "^3.0",
-        "guzzlehttp/guzzle": "^6.0"
-    },
-    "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.1",
-        "mockery/mockery": "^1.0",
-        "phpstan/phpstan": "^0.6.3",
-        "phpunit/phpunit": "^6.0",
-        "satooshi/php-coveralls": "^1.0",
-        "squizlabs/php_codesniffer": "^2.8"
-    },
     "config": {
+        "allow-plugins": {
+            "ergebnis/composer-normalize": true,
+            "phpstan/extension-installer": true
+        },
         "sort-packages": true
     },
     "scripts": {
+        "post-install-cmd": [
+            "@installTools"
+        ],
+        "post-update-cmd": [
+            "@updateTools"
+        ],
         "all": [
+            "@lint",
+            "@analyze",
+            "@tests"
+        ],
+        "analyze": [
             "@cs",
-            "@phpunit",
             "@phpstan"
         ],
-        "cs": "vendor/bin/phpcs --standard=ruleset.xml .",
-        "phpunit": "vendor/bin/phpunit -c phpunit.xml.dist",
-        "phpstan": "vendor/bin/phpstan analyse -l 5 -c phpstan.neon src tests",
+        "cs": "vendor/bin/ecs check --ansi -- src/ tests/ ecs.php",
         "fix": [
-            "vendor/bin/php-cs-fixer fix src",
-            "vendor/bin/php-cs-fixer fix tests",
-            "vendor/bin/phpcbf --standard=ruleset.xml ."
+            "@composer normalize",
+            "vendor/bin/ecs check src/ tests/ ecs.php --ansi --fix"
+        ],
+        "installTools": [
+            "cd tools/coding-standards && composer install && composer link"
+        ],
+        "lint": [
+            "vendor/bin/parallel-lint -j 10 -e php ./src ./tests ecs.php",
+            "@composer validate",
+            "@composer normalize --dry-run"
+        ],
+        "phpstan": "vendor/bin/phpstan analyze ./src ./tests -c phpstan.neon --ansi --level 8",
+        "phpstan-src": "vendor/bin/phpstan analyze ./src -c phpstan.neon --ansi --level 8",
+        "tests": "./vendor/bin/phpunit --colors=always",
+        "tests-ci": "./vendor/bin/phpunit -c phpunit.xml.dist --coverage-html=reports/html --coverage-clover=reports/clover.xml --log-junit=reports/junit.xml",
+        "updateTools": [
+            "cd tools/coding-standards && composer update && composer link"
         ]
     }
 }
