--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,40 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <!-- http://phpunit.de/manual/current/en/appendixes.configuration.html -->
-<phpunit
-        backupGlobals="false"
-        backupStaticAttributes="false"
-        colors="true"
-        convertErrorsToExceptions="true"
-        convertNoticesToExceptions="true"
-        convertWarningsToExceptions="true"
-        processIsolation="false"
-        stopOnFailure="false"
-        syntaxCheck="false"
-        bootstrap="vendor/autoload.php">
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd" colors="true"
+         bootstrap="vendor/autoload.php">
+
+    <coverage>
+        <include>
+            <directory suffix=".php">src</directory>
+        </include>
+        <exclude>
+            <directory>src/Exception</directory>
+        </exclude>
+        <report>
+            <clover outputFile="./reports/clover.xml"/>
+            <html outputDirectory="./reports" highLowerBound="90"/>
+        </report>
+    </coverage>
 
     <testsuites>
-        <testsuite name="VysokeSkoly/ImageApiSdk Test Suite">
-            <directory>./tests</directory>
+        <testsuite name="VysokeSkoly/ImageApi/Sdk Test Suite">
+            <directory>tests</directory>
         </testsuite>
     </testsuites>
 
-    <filter>
-        <whitelist addUncoveredFilesFromWhitelist="true">
-            <directory suffix=".php">src</directory>
-            <exclude>
-                <directory>src/Exception</directory>
-            </exclude>
-        </whitelist>
-    </filter>
-
     <logging>
-        <log type="coverage-html" target="./code-coverage" title="VysokeSkoly/ImageApiSdk"
-             charset="UTF-8" yui="true" highlight="true"
-             lowUpperBound="35" highLowerBound="90"/>
-
-        <log type="coverage-clover" target="./code-coverage/clover.xml"/>
-        <log type="junit" target="./code-coverage/junit.xml" logIncompleteSkipped="false"/>
+        <junit outputFile="./reports/junit.xml"/>
     </logging>
 
     <php>
