--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "ext-json": "*",
         "ext-mbstring": "*",
         "beberlei/assert": "^3.0",
+        "imagine/imagine": "^1.3",
         "lmc/cqrs-http": "^3.0",
         "php-http/multipart-stream-builder": "^1.2"
     },
