Consider 0x3F as a valid jpg

--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
     "config": {
         "allow-plugins": {
             "ergebnis/composer-normalize": true,
+            "php-http/discovery": true,
             "phpstan/extension-installer": true
         },
         "sort-packages": true
